--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    
+
 
 </head>
 
@@ -76,6 +76,12 @@
                                 <img src="img/whatsapp-icon.png" alt="WhatsApp"
                                     style="max-width: 20px; margin-right: 8px;">
                                 Contact Me
+                            </a>
+
+                            <a class="btn" href="resume/MD_Ahasanul_Islam_Resume.pdf" download target="_blank">
+                                <img src="img/download_icon.png" alt="Download"
+                                    style="max-width: 20px; margin-right: 8px" />
+                                Resume
                             </a>
                         </div>
                     </div>
